--- a/.github/workflows/publish_docker.yml
+++ b/.github/workflows/publish_docker.yml
@@ -13,6 +13,12 @@ jobs:
   docker_publish:
     runs-on: "ubuntu-20.04"
 
+    permissions:
+      contents: read
+      packages: write
+      attestations: write
+      id-token: write
+
     steps:
       - uses: actions/checkout@v3.5.2
 
